--- a/proyectos.html
+++ b/proyectos.html
@@ -156,15 +156,15 @@
       </div>
       <div class="row justify-content-center py-3">
         <div class="col-lg-5">
-          <img src="img/Perderse en un lugar conocido/_MG_9050.jpg" alt="max2" width="100%">
+          <img src="img/galeria/inantil/max2.jpg" alt="max2" width="100%">
         </div>
         <div class="col-lg-5">
-          <img src="img/Perderse en un lugar conocido/_MG_9059.jpg" alt="max2" width="100%">
+          <img src="img/galeria/inantil/max3.jpg" alt="max2" width="100%">
         </div>
       </div>
       <div class="row justify-content-center py-3">
         <div class="col-lg-5">
-          <img src="img/Perderse en un lugar conocido/_MG_9039.jpg" alt="max1" width="100%">
+          <img src="img/galeria/inantil/max1.jpg" alt="max1" width="100%">
         </div>
       </div>
     </section>
