--- a/galeria.html
+++ b/galeria.html
@@ -79,19 +79,19 @@
     <!--Aurtorretratos-->
     <section id="AutoRetrato" class="seccion2 py-5 my-5" style="text-align: center;">
       <div class="container">
-        <h2>AUTORETRATO</h2>
+        <h2 class="pb-3">AUTORETRATO</h2>
 
         <div class="row pb-3 justify-content-center">
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/auto retratos/minis/yo 1.png" alt="cris celestial 1" width="100%">
+            <img  class="py-3" src="img/galeria/auto retratos/minis/autoretrato1.jpg" alt="cris celestial 1" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#ar1">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/auto retratos/minis/yo 4.png" alt="cris celestial 2" width="100%">
+            <img  class="py-3" src="img/galeria/auto retratos/minis/autoretrarto2.jpg" alt="cris celestial 2" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#ar2">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/auto retratos/minis/c1.png" alt="cris celestial 2" width="100%">
+            <img  class="py-3" src="img/galeria/auto retratos/minis/autoretrato3.jpg" alt="cris celestial 2" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#ar3">Ver en grande</button>
           </div>
 
@@ -99,42 +99,20 @@
 
         <div class="row pb-3 justify-content-center">
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/auto retratos/minis/IMG_0085.png" alt="cris celestial 1" width="100%">
+            <img  class="py-3" src="img/galeria/auto retratos/minis/autoretrato4.jpg" alt="cris celestial 1" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#ar4">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/auto retratos/minis/IMG_0063.png" alt="cris celestial 2" width="100%">
+            <img  class="py-3" src="img/galeria/auto retratos/minis/autoretrato5.jpg" alt="cris celestial 2" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#ar5">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/auto retratos/minis/IMG_0107.2.png" alt="cris celestial 2" width="100%">
+            <img  class="py-3" src="img/galeria/auto retratos/minis/autoretrato6.jpg" alt="cris celestial 2" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#ar6">Ver en grande</button>
           </div>
 
         </div>
 
-        <div class="row pb-3 justify-content-center">
-          <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/auto retratos/minis/IMG_0212.png" alt="cris celestial 1" width="100%">
-            <button class="boton" data-bs-toggle="modal" data-bs-target="#ar7">Ver en grande</button>
-          </div>
-          <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/auto retratos/minis/IMG_0009.png" alt="cris celestial 2" width="100%">
-            <button class="boton" data-bs-toggle="modal" data-bs-target="#ar8">Ver en grande</button>
-          </div>
-          <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/auto retratos/minis/IMG_0044.png" alt="cris celestial 2" width="100%">
-            <button class="boton" data-bs-toggle="modal" data-bs-target="#ar9">Ver en grande</button>
-          </div>
-
-        </div>
-
-        <div class="row pb-3 justify-content-center">
-          <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/auto retratos/minis/IMG_0099.png" alt="cris celestial 1" width="100%">
-            <button class="boton" data-bs-toggle="modal" data-bs-target="#ar10">Ver en grande</button>
-          </div>
-        </div>
         <!--modales ar-->
       
 <!-- Modal-->
@@ -142,7 +120,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/auto retratos/yo 1.jpg" alt="cris celestial 1" width="100%">
+       <img src="img/galeria/auto retratos/autorretrato1.jpg" alt="cris celestial 1" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -156,7 +134,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/auto retratos/yo 4.jpg" alt="cris celestial 2" width="100%">
+       <img src="img/galeria/auto retratos/autorretrato2.jpg" alt="cris celestial 2" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -170,7 +148,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/auto retratos/c1.jpg" alt="cris celestial 2" width="100%">
+       <img src="img/galeria/auto retratos/autorretrato3.jpg" alt="cris celestial 2" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -184,7 +162,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/auto retratos/IMG_0085.jpg" alt="cris celestial 1" width="100%">
+       <img src="img/galeria/auto retratos/autorretrato4.jpg" alt="cris celestial 1" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -198,7 +176,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/auto retratos/IMG_0063.jpg" alt="cris celestial 2" width="100%">
+       <img src="img/galeria/auto retratos/autorretrato5.jpg" alt="cris celestial 2" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -212,7 +190,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/auto retratos/IMG_0107.2.jpg" alt="cris celestial 2" width="100%">
+       <img src="img/galeria/auto retratos/autorretrato6.jpg" alt="cris celestial 2" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -221,63 +199,10 @@
   </div>
 </div>
 
-<!-- Moda7-->
-<div class="modal fade" id="ar7" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-xl">
-    <div class="modal-content">
-      <div class="modal-body">
-       <img src="img/galeria/auto retratos/IMG_0212.jpg" alt="cris celestial 1" width="100%">
-      </div>
-      <div class="modal-footer">
-        <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
-      </div>
-    </div>
-  </div>
 </div>
+ </section>
 
-<!-- Moda8-->
-<div class="modal fade" id="ar8" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-xl">
-    <div class="modal-content">
-      <div class="modal-body">
-       <img src="img/galeria/auto retratos/IMG_0009.jpg" alt="cris celestial 2" width="100%">
-      </div>
-      <div class="modal-footer">
-        <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
-      </div>
-    </div>
-  </div>
-</div>
 
-<!-- Moda9-->
-<div class="modal fade" id="ar9" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-xl">
-    <div class="modal-content">
-      <div class="modal-body">
-       <img src="img/galeria/auto retratos/IMG_0044.jpg" alt="cris celestial 2" width="100%">
-      </div>
-      <div class="modal-footer">
-        <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Moda10-->
-<div class="modal fade" id="ar10" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-xl">
-    <div class="modal-content">
-      <div class="modal-body">
-       <img src="img/galeria/auto retratos/IMG_0099.jpg" alt="cris celestial 2" width="100%">
-      </div>
-      <div class="modal-footer">
-        <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
-      </div>
-    </div>
-  </div>
-</div>
-      </div>
-    </section>
     <!--Retrato social-->
     <section id="RetratoSocial" class="seccion2 py-5 my-5" style="text-align: center;">
       <div class="container">
