--- a/galeria.html
+++ b/galeria.html
@@ -206,19 +206,19 @@
     <!--Retrato social-->
     <section id="RetratoSocial" class="seccion2 py-5 my-5" style="text-align: center;">
       <div class="container">
-        <h2>RETRATO SOCIAL</h2>
+        <h2 class="pb-3">RETRATO SOCIAL</h2>
 
         <div class="row pb-3 justify-content-center">
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/1 j.png" alt="ama y sha" width="100%">
+            <img  class="py-3" src="img/galeria/foto social/minis/social1m.jpg" alt="ama y sha" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#rs1">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/chato.png" alt="chato" width="100%">
+            <img  class="py-3" src="img/galeria/foto social/minis/social2m.jpg" alt="chato" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#rs2">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/ama.png" alt="ama" width="100%">
+            <img  class="py-3" src="img/galeria/foto social/minis/social3m.jpg" alt="ama" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#rs3">Ver en grande</button>
           </div>
 
@@ -226,15 +226,15 @@
 
         <div class="row pb-3 justify-content-center">
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/IMG_2673.png" alt="pedro" width="100%">
+            <img  class="py-3" src="img/galeria/foto social/minis/social4m.jpg" alt="pedro" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#rs4">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/IMG_2633.png" alt="niña" width="100%">
+            <img  class="py-3" src="img/galeria/foto social/minis/social5m.jpg" alt="niña" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#rs5">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/IMG_2782.png" alt="madre gaby" width="100%">
+            <img  class="py-3" src="img/galeria/foto social/minis/social6m.jpg" alt="madre gaby" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#rs6">Ver en grande</button>
           </div>
 
@@ -242,35 +242,18 @@
 
         <div class="row pb-3 justify-content-center">
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/conchis.png" alt="conchis" width="100%">
+            <img  class="py-3" src="img/galeria/foto social/minis/social7m.jpg" alt="conchis" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#rs7">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/IMG_4898.png" alt="los prohibidos" width="100%">
+            <img  class="py-3" src="img/galeria/foto social/minis/social8m.jpg" alt="los prohibidos" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#rs8">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/IMG_7384.png" alt="posadas" width="100%">
+            <img  class="py-3" src="img/galeria/foto social/minis/social9m.jpg" alt="posadas" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#rs9">Ver en grande</button>
           </div>
 
-        </div>
-
-        <div class="row pb-3 justify-content-center">
-          <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/IMG_8437.png" alt="sergio" width="100%">
-            <button class="boton" data-bs-toggle="modal" data-bs-target="#rs10">Ver en grande</button>
-          </div>
-
-          <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/IMG_5604.png" alt="Eru" width="100%">
-            <button class="boton" data-bs-toggle="modal" data-bs-target="#rs11">Ver en grande</button>
-          </div>
-
-          <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/IMG_5613.png" alt="Gerar" width="100%">
-            <button class="boton" data-bs-toggle="modal" data-bs-target="#rs12">Ver en grande</button>
-          </div>
         </div>
         <!--modales rs-->
       
@@ -279,7 +262,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/foto social/1 j.jpg" alt="ama y sha" width="100%">
+       <img src="img/galeria/foto social/social1.jpg" alt="ama y sha" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -293,7 +276,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/foto social/chato.jpg" alt="chato" width="100%">
+       <img src="img/galeria/foto social/social2.jpg" alt="chato" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -307,7 +290,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/foto social/ama.png" alt="ama" width="100%">
+       <img src="img/galeria/foto social/social3.jpg" alt="ama" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -321,7 +304,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/foto social/IMG_2673.jpg" alt="pedro" width="100%">
+       <img src="img/galeria/foto social/social4.jpg" alt="pedro" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -335,7 +318,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/foto social/IMG_2633.jpg" alt="niña" width="100%">
+       <img src="img/galeria/foto social/social5.jpg" alt="niña" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -349,7 +332,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/foto social/IMG_2782.jpg" alt="madre gaby" width="100%">
+       <img src="img/galeria/foto social/social6.jpg" alt="madre gaby" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -363,7 +346,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/foto social/conchis.jpg" alt="conchis" width="100%">
+       <img src="img/galeria/foto social/social7.jpg" alt="conchis" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -377,7 +360,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/foto social/IMG_4898.jpg" alt=" los prohibidos" width="100%">
+       <img src="img/galeria/foto social/social8.jpg" alt=" los prohibidos" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -391,7 +374,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/foto social/IMG_7384.jpg" alt="posadas" width="100%">
+       <img src="img/galeria/foto social/social9.jpg" alt="posadas" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -400,49 +383,9 @@
   </div>
 </div>
 
-<!-- Moda10-->
-<div class="modal fade" id="rs10" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-xl">
-    <div class="modal-content">
-      <div class="modal-body">
-       <img src="img/galeria/foto social/IMG_8437.jpg" alt="Sergio" width="100%">
-      </div>
-      <div class="modal-footer">
-        <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Moda11-->
-<div class="modal fade" id="rs11" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-xl">
-    <div class="modal-content">
-      <div class="modal-body">
-       <img src="img/galeria/foto social/IMG_5604.jpg" alt="Eru" width="100%">
-      </div>
-      <div class="modal-footer">
-        <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Moda11-->
-<div class="modal fade" id="rs12" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-xl">
-    <div class="modal-content">
-      <div class="modal-body">
-       <img src="img/galeria/foto social/IMG_5613.jpg" alt="Gerar" width="100%">
-      </div>
-      <div class="modal-footer">
-        <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
-      </div>
-    </div>
-  </div>
-</div>
       </div>
     </section>
+    
     <!--Retrato Fine art-->
     <section id="RetratoFineArt" class="seccion2 py-5 my-5" style="text-align: center;">
       <div class="container">
