--- a/galeria.html
+++ b/galeria.html
@@ -66,7 +66,7 @@
         <div class="row py-5  justify-content-center">
           <div class="col-lg-8 col-md-4 col-sm-4">
             <h2 style="text-align: center;">UN POCO MAS DE DETALLES</h2>
-            <p>
+            <p style="text-align: center;">
               Con el paso de los años, mi fotografia a evolucionado y pasado por
                distintas etapas, pero sin embargo, siento
               que hay una unificacion en el estilo general de mi trabajo y aquí podras ver un poco mas 
