--- a/galeria.html
+++ b/galeria.html
@@ -389,19 +389,19 @@
     <!--Retrato Fine art-->
     <section id="RetratoFineArt" class="seccion2 py-5 my-5" style="text-align: center;">
       <div class="container">
-        <h2>RETRATO FINE ART</h2>
+        <h2 class="pb-3">RETRATO FINE ART</h2>
 
         <div class="row pb-3 justify-content-center">
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/retratos/minis/IMG_8694.png" alt="sam" width="100%">
+            <img  class="py-3" src="img/galeria/retratos/minis/retratofa1.jpg" alt="sam" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#fa1">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/retratos/minis/IMG_8698.png" alt="sam2" width="100%">
+            <img  class="py-3" src="img/galeria/retratos/minis/retratofa2.jpg" alt="sam2" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#fa2">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/retratos/minis/IMG_8714 cafe.png" alt="sam3" width="100%">
+            <img  class="py-3" src="img/galeria/retratos/minis/retratofa3.jpg" alt="sam3" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#fa3">Ver en grande</button>
           </div>
 
@@ -409,15 +409,15 @@
 
         <div class="row pb-3 justify-content-center">
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/retratos/minis/leo1.png" alt="leo1" width="100%">
+            <img  class="py-3" src="img/galeria/retratos/minis/retratofa4.jpg" alt="leo1" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#fa4">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/retratos/minis/leo2.png" alt="leo2" width="100%">
+            <img  class="py-3" src="img/galeria/retratos/minis/retratofa5.jpg" alt="leo2" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#fa5">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/retratos/minis/leo3.png" alt="leo3" width="100%">
+            <img  class="py-3" src="img/galeria/retratos/minis/retratofa6.jpg" alt="leo3" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#fa6">Ver en grande</button>
           </div>
 
@@ -425,15 +425,15 @@
 
         <div class="row pb-3 justify-content-center">
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/retratos/minis/IMG_8733.png" alt="sam4" width="100%">
+            <img  class="py-3" src="img/galeria/retratos/minis/retratofa7.jpg" alt="sam4" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#fa7">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/retratos/minis/IMG_8734.png" alt="sam5" width="100%">
+            <img  class="py-3" src="img/galeria/retratos/minis/retratofa8.jpg" alt="sam5" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#fa8">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/retratos/minis/IMG_8743.png" alt="sam6" width="100%">
+            <img  class="py-3" src="img/galeria/retratos/minis/retratofa9.jpg" alt="sam6" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#fa9">Ver en grande</button>
           </div>
 
@@ -441,42 +441,35 @@
 
         <div class="row pb-3 justify-content-center">
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/retratos/minis/IMG_4477.png" alt="Gerar2" width="100%">
+            <img  class="py-3" src="img/galeria/retratos/minis/retratofa10.jpg" alt="Gerar2" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#fa10">Ver en grande</button>
           </div>
 
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/retratos/minis/IMG_4511.png" alt="Gerar3" width="100%">
+            <img  class="py-3" src="img/galeria/retratos/minis/retratofa11.jpg" alt="Gerar3" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#fa11">Ver en grande</button>
           </div>
 
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/retratos/minis/vaso.png" alt="Beto1" width="100%">
+            <img  class="py-3" src="img/galeria/retratos/minis/retratofa12.jpg" alt="Beto1" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#fa12">Ver en grande</button>
           </div>
         </div>
 
         <div class="row pb-3 justify-content-center">
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/retratos/minis/IMG_8783.png" alt="Clau1" width="100%">
+            <img  class="py-3" src="img/galeria/retratos/minis/retratofa13.jpg" alt="Clau1" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#fa13">Ver en grande</button>
           </div>
 
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/retratos/minis/IMG_8786.png" alt="Clau2" width="100%">
+            <img  class="py-3" src="img/galeria/retratos/minis/retratofa14.jpg" alt="Clau2" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#fa14">Ver en grande</button>
           </div>
 
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/retratos/minis/IMG_8632. edit.png" alt="Beto2" width="100%">
+            <img  class="py-3" src="img/galeria/retratos/minis/retratofa15.jpg" alt="Beto2" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#fa15">Ver en grande</button>
-          </div>
-        </div>
-
-        <div class="row pb-3 justify-content-center">
-          <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/retratos/minis/IMG_7417.png" alt="Chato2" width="100%">
-            <button class="boton" data-bs-toggle="modal" data-bs-target="#fa16">Ver en grande</button>
           </div>
         </div>
         <!--modales fa-->
@@ -486,7 +479,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/retratos/IMG_8694.jpg" alt="sam1" width="100%">
+       <img src="img/galeria/retratos/retratofag1.jpg" alt="sam1" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -500,7 +493,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/retratos/IMG_8698.jpg" alt="sam2" width="100%">
+       <img src="img/galeria/retratos/retratofag2.jpg" alt="sam2" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -514,7 +507,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/retratos/IMG_8714 cafe.jpg" alt="sam3" width="100%">
+       <img src="img/galeria/retratos/retratofag3.jpg" alt="sam3" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -528,7 +521,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/retratos/Leo1.jpg" alt="leo1" width="100%">
+       <img src="img/galeria/retratos/retratofag4.jpg" alt="leo1" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -542,7 +535,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/retratos/leo2.jpg" alt="leo2" width="100%">
+       <img src="img/galeria/retratos/retratofag5.jpg" alt="leo2" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -556,7 +549,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/retratos/leo3.jpg" alt="leo3" width="100%">
+       <img src="img/galeria/retratos/retratofag6.jpg" alt="leo3" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -570,7 +563,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/retratos/IMG_8733.jpg" alt="sam4" width="100%">
+       <img src="img/galeria/retratos/retratofag7.jpg" alt="sam4" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -584,7 +577,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/retratos/IMG_8734.jpg" alt="sam5" width="100%">
+       <img src="img/galeria/retratos/retratofag8.jpg" alt="sam5" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -598,7 +591,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/retratos/IMG_8743.jpg" alt="sam6" width="100%">
+       <img src="img/galeria/retratos/retratofag9.jpg" alt="sam6" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -612,7 +605,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/retratos/IMG_4477.jpg" alt="Gerar2" width="100%">
+       <img src="img/galeria/retratos/retratofag10.jpg" alt="Gerar2" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -626,7 +619,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/retratos/IMG_4511.jpg" alt="Gerar3" width="100%">
+       <img src="img/galeria/retratos/retratofag11.jpg" alt="Gerar3" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -640,7 +633,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/retratos/vaso.jpg" alt="Beto" width="100%">
+       <img src="img/galeria/retratos/retratofag12.jpg" alt="Beto" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -654,7 +647,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/retratos/IMG_8783.jpg" alt="Clau1" width="100%">
+       <img src="img/galeria/retratos/retratofag13.jpg" alt="Clau1" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -668,7 +661,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/retratos/IMG_8786.jpg" alt="Gerar3" width="100%">
+       <img src="img/galeria/retratos/retratofag14.jpg" alt="Gerar3" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -682,7 +675,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/retratos/IMG_8632. edit.jpg" alt="Beto" width="100%">
+       <img src="img/galeria/retratos/retratofag15.jpg" alt="Beto" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -691,19 +684,6 @@
   </div>
 </div>
 
-<!-- Moda15-->
-<div class="modal fade" id="fa16" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-xl">
-    <div class="modal-content">
-      <div class="modal-body">
-       <img src="img/galeria/retratos/IMG_7417.jpg" alt="Chato2" width="100%">
-      </div>
-      <div class="modal-footer">
-        <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
-      </div>
-    </div>
-  </div>
-</div>
       </div>
     </section>
     <!--Retrato Infantil-->
