--- a/galeria.html
+++ b/galeria.html
@@ -693,30 +693,30 @@
 
         <div class="row pb-3 justify-content-center">
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/inantil/minis/max1.png" alt="max1" width="100%">
+            <img  class="py-3" src="img/galeria/inantil/minis/retratoi1.jpg" alt="max1" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#ri1">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/inantil/minis/max2.png" alt="max2" width="100%">
+            <img  class="py-3" src="img/galeria/inantil/minis/retratoi2.jpg" alt="max2" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#ri2">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/inantil/minis/max3.png" alt="max3" width="100%">
+            <img  class="py-3" src="img/galeria/inantil/minis/retratoi3.jpg" alt="max3" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#ri3">Ver en grande</button>
           </div>
         </div>
 
         <div class="row pb-3 justify-content-center">
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/inantil/minis/elena1.png" alt="elena1" width="100%">
+            <img  class="py-3" src="img/galeria/inantil/minis/retratoi4.jpg" alt="elena1" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#ri4">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/inantil/minis/joaquin1.png" alt="joaquin" width="100%">
+            <img  class="py-3" src="img/galeria/inantil/minis/retratoi5.jpg" alt="joaquin" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#ri5">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/inantil/minis/elena2.png" alt="elena2" width="100%">
+            <img  class="py-3" src="img/galeria/inantil/minis/retratoi6.jpg" alt="elena2" width="100%">
             <button class="boton" data-bs-toggle="modal" data-bs-target="#ri6">Ver en grande</button>
           </div>
 
@@ -728,7 +728,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/inantil/max1.jpg" alt="max1" width="100%">
+       <img src="img/galeria/inantil/retratoin1.jpg" alt="max1" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -742,7 +742,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/inantil/max2.jpg" alt="max2" width="100%">
+       <img src="img/galeria/inantil/retratoin2.jpg" alt="max2" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -756,7 +756,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/inantil/max3.jpg" alt="max3" width="100%">
+       <img src="img/galeria/inantil/retratoin3.jpg" alt="max3" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -770,7 +770,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/inantil/elena1.jpg" alt="elena1" width="100%">
+       <img src="img/galeria/inantil/retratoin4.jpg" alt="elena1" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -784,7 +784,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/inantil/joaquin1.jpg" alt="joaquin" width="100%">
+       <img src="img/galeria/inantil/retratoin5.jpg" alt="joaquin" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -798,7 +798,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/inantil/elena2.jpg" alt="elena2" width="100%">
+       <img src="img/galeria/inantil/retratoin6.jpg" alt="elena2" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
