--- a/servicios.html
+++ b/servicios.html
@@ -49,6 +49,9 @@
                 <li class="nav-item">
                   <a class="nav-link text-white" href="servicios.html"><strong>Servicos</strong> </a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="blog.html">Blog</a>
+                </li>
               </ul>
             </div>
           </div>
